2007-10-01  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/log.cc (save_log): Return immediately when uri is NULL
	(N71169).

2007-09-26  Mario Sanchez Prada  <msanchez@maemo.org>

	* utils/maemo-select-menu-location-main.c (run_move_to_dialog):
	Replaced hard coded "Ok" with the "ckdg_bd_change_folder_ok"
	logical id provided by OSSO1.1 File management in OSSO UI
	specification (N71172).

2007-09-25  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.h, src/main.cc (get_osso_context): New. Function to
	retrieve the osso_context_t variable initialized in the main
	function from out of main.cc (N70767).
	(Include <libosso.h>): Moved from main.cc to main.h, to define the
	new function commented above (N70767).
	(rpc_show_error_report): Replaced the ai_ni_bd_retry logical id
	for notice dialog with ai_bd_ok (N70914).

	* src/operations.cc (ip_suggest_backup): Changed the method to
	invoke the osso-backup application: now using the
	osso_application_top function instead of the run_cmd utility
	function, to avoid having more than one instance of osso-backup
	when pressing the 'Backup' button (N70767).
	(ip_suggest_backup_cmd_done): Removed, since it's not needed
	because run_cmd it's not used now to launch osso-backup (N70767).

	* src/apt-worker.cc (operation): Changed to use recursion instead
	of an iterative loop here, in order to have a cleaner and better
	understandable code, and taking into account that there shouldn't
	be noticeable efficiency problems in this case.

2007-09-24  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.23

2007-09-20  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/repo.cc (set_cat_list): Added a new parameter to specify a
	GtkTreeIter pointing to the element of the treeview that will be
	focused after rendering it (N67880).
	(cat_edit_response): Update call to set_cat_list to set the
	currently selected iter as the iter to be focused (N67880).
	(refresh_cat_list): Update call to set_cat_list using NULL as the